--- a/Support/Country Survey Details/PHL/LFS/Rmd/Industry_Occupation_Codes.Rmd
+++ b/Support/Country Survey Details/PHL/LFS/Rmd/Industry_Occupation_Codes.Rmd
@@ -61,10 +61,15 @@ overview here is a short table that summarizes the changes in the
 metadata. A detailed version of this table, along with individual
 labels, can be found by running `label_tools.R`.
 
+For many years, the data arrive in two-digit granularity so the variable
+`industry_isic` cannot be constructed, which requires four digits. Other
+variables like `industrycat10` can be still be made with the two-digit
+data.
+
 | scheme | PSCIC | ISIC Version | Years Applicable | Characteristics                                                                                                   | Coding methodology                                 |
 |--------|-------|--------------|------------------|-------------------------------------------------------------------------------------------------------------------|----------------------------------------------------|
-| 1      | 1994  | 3            | 97-00            | First digit nearly always aligns with GLD desired code                                                            | `floor([var]/10)` then adjust by case              |
-| 2      | 1994  | 3            | 01-11            | Departure from first-digit pattern, vals range from 1-99                                                          | `gen industry1 = .` then manually replace          |
+| 1      | 1994  | 3.1          | 97-00            | First digit nearly always aligns with GLD desired code, but not exactly                                           | `floor([var]/10)` then adjust by case              |
+| 2      | 1994  | 3.1          | 01-11            | Departure from first-digit pattern, vals range from 1-99                                                          | `gen industry1 = .` then manually replace          |
 | 3      | 2009  | 4            | 12,13            | Values range from 100 - 9999, first 2 digits usually correspond to key level                                      | code manually by ranges                            |
 | 4      | 2009  | 4            | 14,15,16         | Values range from 1-99 but first two digits correspond to same first two in scheme\#3                             | `gen industry1 = .` then manually replace          |
 | 5      | 2009  | 4            | 2017             | Mix of schemas 3 and 4 depending on month/round                                                                   | code with block conditionals on survey month/round |
