add header info to 97

--- a/Support/Country Survey Details/PHL/LFS/Rmd/Industry_Occupation_Codes.Rmd
+++ b/Support/Country Survey Details/PHL/LFS/Rmd/Industry_Occupation_Codes.Rmd
@@ -116,12 +116,12 @@ upper numeric limits between the two rounds. The data under the 1992
 schema usually ends at `93` while the data under the 2012 schema ends at
 `96`, which is reflected in the 2012 PSOC codebook as well.
 
-| scheme | PSCIC | ISCO Version | Years Applicable       | Characteristics                                                                                                                                                                                           | Coding methodology                                         |
-|--------|-------|--------------|------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------|
-| 1      | 1992  | ISCO-88      | 97,99,00               | String encoded, mostly numeric data. 2-digit. First digit generally corresponds to major category of ISCO-88.                                                                                             | `floor([numeric variable version]/10)` then adjust by case |
-| 2      | 1992  | ISCO-88      | 98, 01-11, 14,15,Jan16 | same as scheme1, but encoded as numeric directly. 2-digit, upper limit of `93`. First digit generally corresponds to major category of ISCO-88.                                                           | `floor([var]/10)` then adjust by case                      |
-| 3      | 1992  | ISCO-88      | 12,13                  | same as scheme2, but 4-digit. First digit generally corresponds to major category of ISCO-88. The 4-digit codes are simply the lowest-level specificity for each profession in the same 1992 PSOC schema. | `floor([var]/1000)` then adjust by case                    |
-| 4      | 2012  | ISCO-08      | April16-2019           | 2-digit, upper limit of `96`. First digit generally corresponds to to major category of ISCO-88.                                                                                                          | `floor([var]/10)` then adjust by cas                       |
+| scheme | PSOC | ISCO Version | Years Applicable       | Characteristics                                                                                                                                                                                           | Coding methodology                                         |
+|--------|------|--------------|------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------|
+| 1      | 1992 | ISCO-88      | 97,99,00               | String encoded, mostly numeric data. 2-digit. First digit generally corresponds to major category of ISCO-88.                                                                                             | `floor([numeric variable version]/10)` then adjust by case |
+| 2      | 1992 | ISCO-88      | 98, 01-11, 14,15,Jan16 | same as scheme1, but encoded as numeric directly. 2-digit, upper limit of `93`. First digit generally corresponds to major category of ISCO-88.                                                           | `floor([var]/10)` then adjust by case                      |
+| 3      | 1992 | ISCO-88      | 12,13                  | same as scheme2, but 4-digit. First digit generally corresponds to major category of ISCO-88. The 4-digit codes are simply the lowest-level specificity for each profession in the same 1992 PSOC schema. | `floor([var]/1000)` then adjust by case                    |
+| 4      | 2012 | ISCO-08      | April16-2019           | 2-digit, upper limit of `96`. First digit generally corresponds to to major category of ISCO-88.                                                                                                          | `floor([var]/10)` then adjust by cas                       |
 
 ### Occupation Codes: Special Cases
 
