Update 1. Introduction to [Survey Acronym].md

--- a/Support/Templates/1. Introduction to [Survey Acronym].md
+++ b/Support/Templates/1. Introduction to [Survey Acronym].md
@@ -30,8 +30,13 @@ A paragraph with an overview of the procedure. It is OK to paste an introductory
 
 The EUS uses a stratified multi-stage design. The [2009 manual]( http://microdata.gov.in/nada43/index.php/catalog/124/download/1274) states the outline of the sampling procedure as:
 
-    A stratified multi-stage design has been adopted for the 66th
-    round survey. The first stage units (FSU) will be the 2001 census villages (Panchayat wards in case of Kerala) in the rural sector and Urban Frame Survey (UFS) blocks in the urban sector. The ultimate stage units (USU) will be households in both the sectors. In case of large FSUs, one intermediate stage of sampling will be the selection of two hamlet-groups (hgs)/ sub-blocks (sbs) from each rural/ urban FSU.Note changes over time.
+    A stratified multi-stage design has been adopted for the 66th round survey. The first stage units (FSU) will be the 
+    2001 census villages (Panchayat wards in case of Kerala) in the rural sector and Urban Frame Survey (UFS) blocks in 
+    the urban sector. The ultimate stage units (USU) will be households in both the sectors. In case of large FSUs, one
+    intermediate stage of sampling will be the selection of two hamlet-groups (hgs)/ sub-blocks (sbs) from each
+    rural/ urban FSU.
+
+Note that, even though the sampling logic is consitent over time, there are changes over time (e.g.m the blocks come from different censuses).
 
 ## What is the significane level
 
