Update 1. Introduction to [Survey Acronym].md

--- a/Support/Templates/1. Introduction to [Survey Acronym].md
+++ b/Support/Templates/1. Introduction to [Survey Acronym].md
@@ -28,7 +28,7 @@ The microdata are free and publicly available on the Ministry of Statistics and 
 
 A paragraph with an overview of the procedure. It is OK to paste an introductory paragraph from the documentation with reference. If the procedure varies over time make a brief note of it. Example:
 
-The EUS uses a stratified multi-stage design. The [2009 manual]( http://microdata.gov.in/nada43/index.php/catalog/124/download/1274) states the outline of the sampling procedure as:
+The EUS uses a stratified multi-stage design. The 2009 manual (see document *Introduction Concepts, Definitions and Procedures* under the ["Other Materials" section of the 2009 documentation site](http://microdata.gov.in/nada43/index.php/catalog/124/related_materials)) states the outline of the sampling procedure as:
 
     A stratified multi-stage design has been adopted for the 66th round survey. The first stage units (FSU) will be the 
     2001 census villages (Panchayat wards in case of Kerala) in the rural sector and Urban Frame Survey (UFS) blocks in 
