Update 1. Introduction to [Survey Acronym].md

--- a/Support/Templates/1. Introduction to [Survey Acronym].md
+++ b/Support/Templates/1. Introduction to [Survey Acronym].md
@@ -28,7 +28,7 @@ The microdata are free and publicly available on the Ministry of Statistics and 
 
 A paragraph with an overview of the procedure. It is OK to paste an introductory paragraph from the documentation with reference. If the procedure varies over time make a brief note of it. Example:
 
-The EUS uses a stratified multi-stage design. The 2009 manual (see document *Introduction Concepts, Definitions and Procedures* under the ["Other Materials" section of the 2009 documentation site](http://microdata.gov.in/nada43/index.php/catalog/124/related_materials)) states the outline of the sampling procedure as:
+The EUS uses a stratified multi-stage design. The 2009 manual (see document *Introduction Concepts, Definitions and Procedures* under the ["Other Materials" section of the 2009 documentation site](http://microdata.gov.in/nada43/index.php/catalog/124/related_materials)) outlines the sampling procedure as:
 
     A stratified multi-stage design has been adopted for the 66th round survey. The first stage units (FSU) will be the 
     2001 census villages (Panchayat wards in case of Kerala) in the rural sector and Urban Frame Survey (UFS) blocks in 
@@ -40,7 +40,13 @@ Note that, even though the sampling logic is consitent over time, there are chan
 
 ## What is the significane level
 
+Brief outline of to what level information in the survey can be aggregated and produce statistically significant results. Example:
+
+The official reports detail results by gender, sector (urban or rural), and state. That is, the unemployment rate of urban women in Madhya Pradesh can be safely reported.
+
 ## Other noteworthy aspects
+
+Any other items that are specific to the survey, that should be highlighted but that may be different from one survey to the next. For example, why you picked only a particlar quarter instead of appending all four. Or particulars about changes in some administrative areas over time. Or how you mapped to ISCO or ISIC, yet if this takes too long, it may be best to create a further document and link to it, as stated below.
 
 ### List items as needed
 
