Update 1. Introduction to [Survey Acronym].md

--- a/Support/Templates/1. Introduction to [Survey Acronym].md
+++ b/Support/Templates/1. Introduction to [Survey Acronym].md
@@ -50,6 +50,8 @@ Any other items that are specific to the survey, that should be highlighted but 
 
 ### List items as needed
 
+Preferably one, two paragraphs per item.
+
 ### Be brief, if longer, refer to other, explicit documents
 
-As for example, the [conversion documents]( https://github.com/worldbank/gld/blob/d648b91e523e72f1fa90bf5cf799252b94c8bd05/Support/Country%20Survey%20Details/MEX/ENOE/Correspondence_NAICS_ISIC.md).
+As stated above, the [conversion documents]( https://github.com/worldbank/gld/blob/d648b91e523e72f1fa90bf5cf799252b94c8bd05/Support/Country%20Survey%20Details/MEX/ENOE/Correspondence_NAICS_ISIC.md).
