Update introduction template
- Added question marks
- Expanded "other noteworthy aspects" section to be help guide readers better.

--- a/Support/Templates/1. Introduction to [Survey Acronym].md
+++ b/Support/Templates/1. Introduction to [Survey Acronym].md
@@ -18,13 +18,13 @@ The Indian EUS is a labour force survey collecting information on demographic de
 | …	| …			| …			|
 | 2011	| 101,724		| 456,999		|
 
-## Where can the data be found
+## Where can the data be found?
 
 Paragraph on the source of the data and the documentation. If publicly available for download refer to this explicitly. If the data can only be circulated within the World Bank, make a note of this. If the data, can only be used after filling out a special data request form explain so. Say to get in touch with Jobs Group (cannot provide an email address for now, need to create one) – only WB staff should get in touch, though. Example:
 
 The microdata are free and publicly available on the Ministry of Statistics and Programme Implementation’s (MOSPI) [National Data Archive of microdata]( http://microdata.gov.in/nada43/index.php/catalog/EUE). The website also provides all necessary documentation.
 
-## What is the sampling procedure
+## What is the sampling procedure?
 
 A paragraph with an overview of the procedure. It is OK to paste an introductory paragraph from the documentation with reference. If the procedure varies over time make a brief note of it. Example:
 
@@ -38,7 +38,7 @@ The EUS uses a stratified multi-stage design. The 2009 manual (see document *Int
 
 Note that, even though the sampling logic is consitent over time, there are changes over time (e.g.m the blocks come from different censuses).
 
-## What is the significane level
+## What is the significane level?
 
 Brief outline of to what level information in the survey can be aggregated and produce statistically significant results. Example:
 
@@ -48,10 +48,10 @@ The official reports detail results by gender, sector (urban or rural), and stat
 
 Any other items that are specific to the survey, that should be highlighted but that may be different from one survey to the next. For example, why you picked only a particlar quarter instead of appending all four. Or particulars about changes in some administrative areas over time. Or how you mapped to ISCO or ISIC, yet if this takes too long, it may be best to create a further document and link to it, as stated below.
 
-### List items as needed
+### List items as needed and be brief - if longer, refer to other, explicit documents
 
-Preferably one, two paragraphs per item.
+These individual additional points should be about one to two paragraphs long. If it takes longer consider whether you want to spend the time writing such a long text. It is noble of you, but if you already gave readers and intro, it may be enough and your time is better used elsewhere. If you still consider it is important, you may wish to write a separate text. Make a brief intro here and refer people to the longer text. The point below is an example of this.
 
-### Be brief, if longer, refer to other, explicit documents
+### ISIC mapping example (MEX)
 
-As stated above, the [conversion documents]( https://github.com/worldbank/gld/blob/d648b91e523e72f1fa90bf5cf799252b94c8bd05/Support/Country%20Survey%20Details/MEX/ENOE/Correspondence_NAICS_ISIC.md).
+The Mexican INEGI codes industry in the ENE based on the North American Industry Classification System (NAICS). This system is very different from the international ISIC format. To map from NAICS to ISIC (versions 3.1 and 4) to code `industrycat_isic`, a special procedure is needed. This process is detailed in a [separate document, available here]( https://github.com/worldbank/gld/blob/d648b91e523e72f1fa90bf5cf799252b94c8bd05/Support/Country%20Survey%20Details/MEX/ENOE/Correspondence_NAICS_ISIC.md).
