--- a/Support/Guides and Documentation/Rmd/renv_quick_guide.Rmd
+++ b/Support/Guides and Documentation/Rmd/renv_quick_guide.Rmd
@@ -4,7 +4,7 @@ output:
   github_document:
     html_preview: false
     toc: true
-    toc_depth: 3
+    toc_depth: 4
 editor_options: 
   markdown: 
     wrap: 72
@@ -61,7 +61,7 @@ need to only
 
 2.  Install the `renv` package
 
-    ```{r}
+    ```{r, eval=FALSE}
     install.packages("renv")
     ```
 
@@ -113,6 +113,28 @@ renv::restore()
 This will install the packages that are missing or have been updated.
 
 # Help! (light)
+
+#### If you're not sure if `renv` is initialized on the branch you're using
+
+For most cases, users will be coming to a branch with `renv` already
+initialized. If you want aren't sure if you have `renv` initialized,
+type
+
+```{r, eval=FALSE}
+renv::status()
+```
+
+#### If you need to initialize `renv` on your branch
+
+If for some reason `renv` is not initialized on your branch, follow
+steps 1 and 2 above in "Using renv for the First Time". Then initialize
+using
+
+```{r, eval=FALSE}
+renv::init()
+```
+
+and select option 2 when it asks you about libraries.
 
 #### If `renv` doesn't load
 
