--- a/Support/Country Survey Details/PHL/LFS/Rmd/Introduction to PHL.Rmd
+++ b/Support/Country Survey Details/PHL/LFS/Rmd/Introduction to PHL.Rmd
@@ -21,50 +21,67 @@ knit: (function(input, ...) {
 
 ## What is the PHL LFS?
 
-The Philippines Labor Force Survey (LFS) is a Labor Force Survey that is
-usually collected four times per year. Our analysis begins in 1997.
+The Philippines Labor Force Survey (LFS) is a [Labor Force
+Survey](https://psa.gov.ph/statistics/survey/labor-force/lfs-index) by
+the [Philippine Statistics Authority](https://psa.gov.ph/) that is
+usually collected four times per year, updated with a new questionnaire
+design in 1987 (PSA Technical Note). Our analysis begins in 1997.
 
 ## What does the PHL LFS cover?
 
 The following table presents unique Household and Individual
-observations in the final GLD dataset.
+observations in the final GLD dataset after processing. Most raw survey
+files did not provide a unique household or individual ID, so these were
+constructed. More information below in "Other Noteworthy Aspects".
 
 | Year | No. of Households | No. of Individuals |
 |:-----|:------------------|:-------------------|
-| 1997 |                   |                    |
-| 1998 |                   |                    |
-| 1999 |                   |                    |
-| 2000 |                   |                    |
-| 2001 |                   |                    |
-| 2002 |                   |                    |
-| 2003 |                   |                    |
-| 2004 |                   |                    |
-| 2005 |                   |                    |
-| 2006 |                   |                    |
-| 2007 |                   |                    |
-| 2008 |                   |                    |
-| 2009 |                   |                    |
-| 2010 |                   |                    |
-| 2011 |                   |                    |
-| 2012 |                   |                    |
-| 2013 |                   |                    |
-| 2014 |                   |                    |
-| 2015 |                   |                    |
-| 2016 |                   |                    |
-| 2017 |                   |                    |
-| 2018 |                   |                    |
-| 2019 |                   |                    |
+| 1997 | 158,582           | 823776             |
+| 1998 | 39,837            | 207,663            |
+| 1999 | 38,830            | 200,902            |
+| 2000 | 37,967            | 195,553            |
+| 2001 | 39,716            | 207,453            |
+| 2002 | 154,111           | 79,3975            |
+| 2003 | 168,621           | 837,164            |
+| 2004 | 175,462           | 853,049            |
+| 2005 | 172,619           | 836,289            |
+| 2006 | 167,118           | 812,006            |
+| 2007 | 164,680           | 798,835            |
+| 2008 | 166,006           | 797,746            |
+| 2009 | 166,974           | 804,166            |
+| 2010 | 166,432           | 795,851            |
+| 2011 | 170,426           | 807,631            |
+| 2012 | 172,586           | 817,049            |
+| 2013 | 174,048           | 818,118            |
+| 2014 | 172,077           | 805,307            |
+| 2015 | 175,901           | 820,811            |
+| 2016 | 167,738           | 752,232            |
+| 2017 | 164,198           | 720,935            |
+| 2018 | 163,507           | 722,237            |
+| 2019 | 160,309           | 707,022            |
 
 ## Where can the data be found?
 
+The data for the GLD analysis originates from internal World Bank
+sources, but many of the survey data are listed publicly on either the
+Philippine Statistics Authority's [Data
+Archive](http://psada.psa.gov.ph/index.php/catalog/LFS) or on the
+International Labour Organization's
+[repository](https://www.ilo.org/surveyLib/index.php/catalog/LFS#_r=&collection=&country=171&dtype=&from=1975&page=1&ps=30&sid=&sk=&sort_by=nation&sort_order=&to=2019&topic=&view=s&vk=),
+subject to agreements and terms on each of these sites. Documentation
+can also be found at each of these two locations.
+
 ## What is the sampling procedure?
 
-    example
+A thorough explanation of the general sampling scheme is available from
+the [Philippine Statistics
+Authority](https://psa.gov.ph/content/technical-notes-labor-force-survey-lfs)
+and a abbreviated version is made available here from the PSA:
 
 ## What is the significance level?
 
 ## Other noteworthy aspects
 
-### List items as needed and be brief - if longer, refer to other, explicit documents
+### 
 
 ### 
