--- a/Support/Country Survey Details/PHL/LFS/Rmd/Introduction to PHL.Rmd
+++ b/Support/Country Survey Details/PHL/LFS/Rmd/Introduction to PHL.Rmd
@@ -24,8 +24,9 @@ knit: (function(input, ...) {
 The Philippines Labor Force Survey (LFS) is a [Labor Force
 Survey](https://psa.gov.ph/statistics/survey/labor-force/lfs-index) by
 the [Philippine Statistics Authority](https://psa.gov.ph/) that is
-usually collected four times per year, updated with a new questionnaire
-design in 1987 (PSA Technical Note). Our analysis begins in 1997.
+usually consists of four rounds per year, updated with a new
+questionnaire design in 1987 (PSA Technical Note). Our analysis begins
+in 1997.
 
 ## What does the PHL LFS cover?
 
@@ -78,9 +79,40 @@ the [Philippine Statistics
 Authority](https://psa.gov.ph/content/technical-notes-labor-force-survey-lfs)
 and a abbreviated version is made available here from the PSA:
 
+-   The Provinces and High Density Urban Cities are used as the sampling
+    domains. The 2013 revision has 117 domains, which consists of 81
+    provinces and 36 urban cities and other areas.
+
+-   The PSA designs a Master Sample that further subdivides each
+    sampling domain into consists of non-overlapping, randomly-sampled
+    sets of geographic areas called Primary Sampling Units, which
+    contain about 100-400 households.
+
 ## What is the significance level?
 
-## Other noteworthy aspects
+The primary significance level is the Province or first administrative
+disaggregation,
+[see](https://psa.gov.ph/sites/default/files/ISHB%20-%20Labor%20Force%20Series%20No.161%20July%202014.pdf).
+
+## Other Documentation Files
+
+[Administrative
+Levels](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Administrative_Levels.md)
+
+[Education and Labor Modules Minimum
+Ages](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Edu_Labor_Ages.md)
+
+[Education
+Levels](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Education_Levels.md)
+
+[Household
+IDs](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Household_IDs.md)
+
+[Industry and Occupation
+Codes](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Industry_Occupation_Codes.md)
+
+[Weights Variables
+Checks](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Weights_PSA_Checks.md)
 
 ### 
 
