--- a/Support/Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
+++ b/Support/Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
@@ -1,21 +1,16 @@
----
-title: "Introduction to PHL"
-output: 
-  github_document:
-    html_preview: false
-    toc: true
-    toc_depth: 3
-editor_options: 
-  markdown: 
-    wrap: 72
-knit: (function(input, ...) {
-    rmarkdown::render(
-      input,
-      output_dir = here::here("Support/Country Survey Details/PHL/LFS"),
-      envir = globalenv()
-    )
-  })
----
+1. Introduction to PHL
+================
+
+-   [Introduction to Philippines Labor Force Survey (PHL
+    LFS)](#introduction-to-philippines-labor-force-survey-phl-lfs)
+    -   [What is the PHL LFS?](#what-is-the-phl-lfs)
+    -   [What does the PHL LFS cover?](#what-does-the-phl-lfs-cover)
+    -   [Where can the data be found?](#where-can-the-data-be-found)
+    -   [What is the sampling
+        procedure?](#what-is-the-sampling-procedure)
+    -   [What is the significance
+        level?](#what-is-the-significance-level)
+    -   [Other Documentation Files](#other-documentation-files)
 
 # Introduction to Philippines Labor Force Survey (PHL LFS)
 
@@ -33,9 +28,9 @@ in 1997.
 The following table presents unique Household and Individual
 observations in the final GLD dataset after processing. Most raw survey
 files did not provide a unique household or individual ID, so these were
-constructed. More information below in "Other Noteworthy Aspects".
+constructed. More information below in “Other Noteworthy Aspects”.
 
-| Year | No. of Households | No. of Individuals |
+| Year | No. of Households | No. of Individuals |
 |:-----|:------------------|:-------------------|
 | 1997 | 158,582           | 823776             |
 | 1998 | 39,837            | 207,663            |
@@ -65,9 +60,9 @@ constructed. More information below in "Other Noteworthy Aspects".
 
 The data for the GLD analysis originates from internal World Bank
 sources, but many of the survey data are listed publicly on either the
-Philippine Statistics Authority's [Data
+Philippine Statistics Authority’s [Data
 Archive](http://psada.psa.gov.ph/index.php/catalog/LFS) or on the
-International Labour Organization's
+International Labour Organization’s
 [repository](https://www.ilo.org/surveyLib/index.php/catalog/LFS#_r=&collection=&country=171&dtype=&from=1975&page=1&ps=30&sid=&sk=&sort_by=nation&sort_order=&to=2019&topic=&view=s&vk=),
 subject to agreements and terms on each of these sites. Documentation
 can also be found at each of these two locations.
@@ -113,7 +108,3 @@ Codes](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Surv
 
 [Weights Variables
 Checks](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Weights_PSA_Checks.md)
-
-### 
-
-### 
