--- a/Support/Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
+++ b/Support/Country Survey Details/PHL/LFS/1.--Introduction-to-PHL.md
@@ -91,20 +91,14 @@ disaggregation,
 
 ## Other Documentation Files
 
-[Administrative
-Levels](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Administrative_Levels.md)
+[Administrative Levels](Administrative_Levels.md)
 
-[Education and Labor Modules Minimum
-Ages](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Edu_Labor_Ages.md)
+[Education and Labor Modules Minimum Ages](Edu_Labor_Ages.md)
 
-[Education
-Levels](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Education_Levels.md)
+[Education Levels](Education_Levels.md)
 
-[Household
-IDs](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Household_IDs.md)
+[Household IDs](Household_IDs.md)
 
-[Industry and Occupation
-Codes](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Industry_Occupation_Codes.md)
+[Industry and Occupation Codes](Industry_Occupation_Codes.md)
 
-[Weights Variables
-Checks](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Weights_PSA_Checks.md)
+[Weights Variables Checks](Weights_PSA_Checks.md)
