--- a/Support/Country Survey Details/PHL/LFS/Rmd/1.  Introduction to PHL.Rmd
+++ b/Support/Country Survey Details/PHL/LFS/Rmd/1.  Introduction to PHL.Rmd
@@ -96,20 +96,19 @@ disaggregation,
 
 ## Other Documentation Files
 
-[Administrative
-Levels](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Administrative_Levels.md)
+[Administrative Levels](Administrative_Levels.md)
 
 [Education and Labor Modules Minimum
-Ages](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Edu_Labor_Ages.md)
+Ages](Edu_Labor_Ages.md)
 
 [Education
-Levels](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Education_Levels.md)
+Levels](Education_Levels.md)
 
 [Household
-IDs](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Household_IDs.md)
+IDs](Household_IDs.md)
 
 [Industry and Occupation
-Codes](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Industry_Occupation_Codes.md)
+Codes](Industry_Occupation_Codes.md)
 
 [Weights Variables
-Checks](https://github.com/worldbank/gld/blob/PHL-intro-md/Support/Country%20Survey%20Details/PHL/LFS/Weights_PSA_Checks.md)
+Checks](Weights_PSA_Checks.md)
